@@ -28,6 +28,11 @@ Copyright_License {
 #include "Util/Macros.hpp"
 #include "Interface.hpp"
 
+#ifdef ANDROID
+#include "Android/BluetoothHelper.hpp"
+#include "Java/Global.hpp"
+#endif
+
 #include <stdio.h>
 
 static const char *const port_type_strings[] = {
@@ -143,10 +148,18 @@ DeviceConfig::GetPortName(TCHAR *buffer, size_t max_size) const
   case PortType::SERIAL:
     return path.c_str();
 
-  case PortType::RFCOMM:
-    StringFormat(buffer, max_size, _T("Bluetooth %s"),
-                 bluetooth_mac.c_str());
+  case PortType::RFCOMM: {
+    const TCHAR *name = bluetooth_mac.c_str();
+#ifdef ANDROID
+    const char *name2 =
+      BluetoothHelper::GetNameFromAddress(Java::GetEnv(), name);
+    if (name2 != nullptr)
+      name = name2;
+#endif
+
+    StringFormat(buffer, max_size, _T("Bluetooth %s"), name);
     return buffer;
+    }
 
   case PortType::RFCOMM_SERVER:
     return _("Bluetooth server");
