@@ -29,6 +29,7 @@ Version 6.7 - not yet released
 * Android
   - support IOIO via OpenAccessory (Android 4.x)
   - support USB host mode and USB-RS232 adapters on the Nook (#2886)
+  - show Bluetooth name instead of MAC address in device list
 
 Version 6.6.2 - not yet released
 * tasks
